
  - #6: Don't generate redundant ``<ul>`` for top-level TOC tree
    items, which leads to a visual separation of TOC entries.

  - #23: Added a ``classmethod`` directive along with ``method``
    and ``staticmethod``.

  - Added a ``toctree`` variable to the templates, and the ability to
    include external links in toctrees.

* Configuration:

  - The new ``html_add_permalinks`` config value can be used to
    switch off the generated "paragraph sign" permalinks for each
    heading and definition environment.

  - The new ``html_show_sourcelink`` config value can be used to
    switch off the links to the reST sources in the sidebar.

  - The new ``html_collapse_toctree`` config value can be used to
    "collapse" the generated toctree given to the templates.

  - The default value for ``htmlhelp_basename`` is now the project
    title, cleaned up as a filename.

  - The new ``trim_footnote_reference_space`` config value mirrors
    the docutils config value of the same name and removes the
    space before a footnote reference that is necessary for reST
    to recognize the reference.

* Builders:

  - New builder for Qt help collections, by Antonio Valentino.

  - The new ``html_link_suffix`` config value can be used to select
    the suffix of generated links between HTML files.

* New translations:
  
  - Italian by Sandro Dentella.

  - Ukrainian by Stoune.

* Extensions and API:

  - Autodoc now handles documented attributes.

  - Autodoc now handles inner classes and their methods.

  - Autodoc can document classes as functions now if explicitly
    marked with `autofunction`.

  - There is now a ``Sphinx.add_lexer()`` method to be able to use
    custom Pygments lexers easily.

  - There is now ``Sphinx.add_generic_rol()`` to mirror the docutils'
    own function.

* Other changes:

  - Config overrides for single dict keys can now be given on the
    command line.

  - There is now a ``doctest_global_setup`` config value that can